objects/Tour_Summary__c.object
<CustomObject>
    <fields>
        <fullName>BuildingName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the name of the building in which the reservable exist in which the prospect is interested.</description>
        <inlineHelpText>Captures the name of the building in which the reservable exist in which the prospect is interested.</inlineHelpText>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Tour Summaries</relationshipLabel>
        <relationshipName>Tour_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_UUID__c</fullName>
        <description>Captures the building UUID in which the prospect has shown interest</description>
        <inlineHelpText>Captures the building UUID in which the prospect has shown interest</inlineHelpText>
        <label>Building UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Budget__c</fullName>
        <description>What are they paying today?</description>
        <inlineHelpText>What are they paying today?</inlineHelpText>
        <label>Current Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tour Summaries</relationshipLabel>
        <relationshipName>Tour_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_Budget__c</fullName>
        <description>What do they plan on paying?</description>
        <inlineHelpText>What do they plan on paying?</inlineHelpText>
        <label>Desired Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>WeWork Member Referral</fullName>
                </value>
                <value>
                    <fullName>In the news</fullName>
                </value>
                <value>
                    <fullName>Google search</fullName>
                </value>
                <value>
                    <fullName>Desk listing site</fullName>
                </value>
                <value>
                    <fullName>Sign on the Building / Walk By</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Partnership Referral</fullName>
                </value>
                <value>
                    <fullName>Outbound Email/Cold Call</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_Buildings__c</fullName>
        <description>List of buildings in which the prospect has shown interest during the tour</description>
        <inlineHelpText>List of buildings in which the prospect has shown interest during the tour</inlineHelpText>
        <label>Interested Buildings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS-Metropool</fullName>
                </value>
                <value>
                    <fullName>AMS-Weteringschans</fullName>
                </value>
                <value>
                    <fullName>ARC-Libertador 1000</fullName>
                </value>
                <value>
                    <fullName>ARC-Torre Bellini</fullName>
                </value>
                <value>
                    <fullName>ARN-Urban Escape</fullName>
                </value>
                <value>
                    <fullName>ATL-1372 Peachtree</fullName>
                </value>
                <value>
                    <fullName>ATL-Colony Square</fullName>
                </value>
                <value>
                    <fullName>ATL-Tower Place</fullName>
                </value>
                <value>
                    <fullName>AUS-Congress</fullName>
                </value>
                <value>
                    <fullName>AUS-Domain</fullName>
                </value>
                <value>
                    <fullName>AUS-University Park</fullName>
                </value>
                <value>
                    <fullName>BHZ-Boulevard Shopping</fullName>
                </value>
                <value>
                    <fullName>BKN-109 S 5th St</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Prospect)</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Sands)</fullName>
                </value>
                <value>
                    <fullName>BKN-Montague St.</fullName>
                </value>
                <value>
                    <fullName>BKN-Williamsburg</fullName>
                </value>
                <value>
                    <fullName>BL-Hackescher Markt</fullName>
                </value>
                <value>
                    <fullName>BL-Ku'damm</fullName>
                </value>
                <value>
                    <fullName>BLR-EGL</fullName>
                    <label>BLR-Embassy Golf Links</label>
                </value>
                <value>
                    <fullName>BLR- Galaxy</fullName>
                </value>
                <value>
                    <fullName>BLR-Koramangala</fullName>
                    <label>BLR-Prestige Atlanta</label>
                </value>
                <value>
                    <fullName>BLR-Hebbal</fullName>
                    <label>BLR-RMZ Latitude Commercial</label>
                </value>
                <value>
                    <fullName>BLR-Salarpuria Magnificia</fullName>
                </value>
                <value>
                    <fullName>BLR-Salarpuria Symbiosis</fullName>
                </value>
                <value>
                    <fullName>BLR-Pavilion</fullName>
                    <label>BLR-The Pavilion</label>
                </value>
                <value>
                    <fullName>BL-Sony Center</fullName>
                </value>
                <value>
                    <fullName>BOG-Calle 100 #11b-01</fullName>
                </value>
                <value>
                    <fullName>BOG-Calle 26 # 92 - 32</fullName>
                </value>
                <value>
                    <fullName>BOG-Calle 81 #11-81</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks__c</fullName>
        <label>Interested in Number of Desk(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <description>Date on which the prospect want to move in</description>
        <inlineHelpText>Date on which the prospect wants to move in</inlineHelpText>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_Decision_Maker__c</fullName>
        <label>Name of Decision Maker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Follow-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objections__c</fullName>
        <description>Captures the reason why the prospect is not ready to Sign but is Interested</description>
        <inlineHelpText>Captures the reason why the prospect is not ready to Sign but is Interested</inlineHelpText>
        <label>Objections</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interested for the future</fullName>
                </value>
                <value>
                    <fullName>Not primary decision maker</fullName>
                </value>
                <value>
                    <fullName>Interested in other WeWork Locations</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Comparing Competitors</fullName>
                </value>
                <value>
                    <fullName>Desired office/Desk not Available</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Capacity__c</fullName>
        <description>Captures the capacity information of the office in which  the prospect is interested</description>
        <inlineHelpText>Captures the capacity information of the office in which  the prospect is interested</inlineHelpText>
        <label>Office Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Captures the opportunity information which is associated with the Tour for which the tour outcome is filled in</description>
        <inlineHelpText>Captures the opportunity information which is associated with the Tour for which the tour outcome is filled in</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tour Summaries</relationshipLabel>
        <relationshipName>Tour_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Objections__c</fullName>
        <description>Captures the reason in case if the prospect select Other from the Objection list, this has to be a mandatory field if the prospect has other as selected value</description>
        <inlineHelpText>Captures the reason in case if the prospect select Other from the Objection list</inlineHelpText>
        <label>Other Objections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Captures the product line in which the prospect is interested in</description>
        <inlineHelpText>Captures the product line in which the prospect is interested in</inlineHelpText>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WeWork</fullName>
                </value>
                <value>
                    <fullName>WeLive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reservable_Floor__c</fullName>
        <description>Contains the floor information of the reservable seen during the tour by the prospect</description>
        <inlineHelpText>Contains the floor information of the reservable seen during the tour by the prospect</inlineHelpText>
        <label>Reservable Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable_Name__c</fullName>
        <description>Capture the name of the Reservable which the prospects has seen during the tour</description>
        <inlineHelpText>Capture the name of the Reservable which the prospects has seen during the tour</inlineHelpText>
        <label>Reservable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable_Price__c</fullName>
        <description>Captures the information about the reservable that the prospect has shown interest during the tour</description>
        <inlineHelpText>Captures the information about the reservable that the prospect has shown interest during the tour</inlineHelpText>
        <label>Reservable Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reservable_UUID__c</fullName>
        <description>Captures the UUID of the reservable in which the prospect is interested in</description>
        <inlineHelpText>Captures the UUID of the reservable in which the prospect is interested in</inlineHelpText>
        <label>Reservable UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TourSummary__c</fullName>
        <description>Stores the ID of the tour, for which the summary record is created</description>
        <inlineHelpText>Stores the ID of the tour, for which the summary record is created</inlineHelpText>
        <label>Related Tour</label>
        <referenceTo>Tour_Outcome__c</referenceTo>
        <relationshipLabel>Tour Summaries</relationshipLabel>
        <relationshipName>Tour_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Notes__c</fullName>
        <description>Captures the notes that Community or Sales Rep fill in while updating the tour outcome form</description>
        <inlineHelpText>Captures the notes that Community or Sales Rep fill in while updating the tour outcome form</inlineHelpText>
        <label>Tour Outcome Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome__c</fullName>
        <description>Captures the prospect interest</description>
        <inlineHelpText>Captures the prospect interest</inlineHelpText>
        <label>Tour Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to Sign</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Does not want We Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>Capture the list of Units in which the prospect is interested</description>
        <inlineHelpText>Capture the list of Units in which the prospect is interested</inlineHelpText>
        <label>Unit Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Desk</fullName>
                </value>
                <value>
                    <fullName>Dedicated Desk</fullName>
                </value>
                <value>
                    <fullName>Hot Desk</fullName>
                </value>
                <value>
                    <fullName>Labs Desk</fullName>
                </value>
                <value>
                    <fullName>Lounge Membership</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Shared Desk</fullName>
                </value>
                <value>
                    <fullName>We Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Stores all the information related to the Tour Outform Form filled in Spacestation and Salesforce</description>
    <label>Tour Summary</label>
    <nameField>
        <label>Tour Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>